<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.caressa.security.viewmodel.HlmtLoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_12sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/logo_container"
                layout="@layout/hlpace_logo_layout" />

            <com.caressa.common.view.ArcTextView
                android:id="@+id/lbl_enter_number_desc"
                style="@style/VivantTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/DO_YOU_HAVE_HLM_360_ACCOUNT"
                android:textSize="@dimen/_14sdp" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.caressa.common.view.ArcBorderButton
                    android:id="@+id/btn_have_account"
                    style="@style/HlmtRoundLeftButton"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="@string/YES_I_HAVE"
                    app:isRound="true"
                    app:isTemplate="true" />

                <com.caressa.common.view.ArcBorderButton
                    android:id="@+id/btn_i_dont"
                    style="@style/HlmtRoundLeftButton"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="@string/NO_DONT"
                    app:isRound="true"
                    app:isTemplate="true" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>