<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.caressa.security.viewmodel.HlmtLoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/logo_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.caressa.common.view.ArcImageView
                        android:id="@+id/img_logo"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:scaleType="fitEnd"
                        app:srcCompat="@drawable/hl_pace_logo" />

                    <com.caressa.common.view.ArcTextView
                        style="@style/VivantTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/POWERED_BY"
                        android:textSize="@dimen/_13sdp" />

                    <com.caressa.common.view.ArcImageView
                        android:layout_width="@dimen/_180sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/hlmt_banner" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.caressa.common.view.ArcTextView
                    android:id="@+id/textInfo"
                    style="@style/VivantTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:gravity="center"
                    android:text="@string/LOGIN_SELECTION_INFO"
                    app:layout_constraintEnd_toEndOf="@+id/logo_container"
                    app:layout_constraintStart_toStartOf="@+id/logo_container"
                    app:layout_constraintTop_toBottomOf="@+id/logo_container" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/button_conatiner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/textInfo"
                    app:layout_constraintStart_toStartOf="@+id/textInfo"
                    app:layout_constraintTop_toBottomOf="@+id/textInfo">

                    <com.caressa.common.view.ArcBorderButton
                        android:id="@+id/btn_sign_in"
                        style="@style/HlmtRoundLeftButton"
                        android:layout_width="0dp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:text="@string/SIGN_IN"
                        app:isRound="true"
                        app:isTemplate="true" />

                    <com.caressa.common.view.ArcBorderButton
                        android:id="@+id/btn_register"
                        style="@style/HlmtRoundLeftButton"
                        android:layout_width="0dp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:text="@string/REGISTER"
                        app:isRound="true"
                        app:isTemplate="true" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>