<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.caressa.security.viewmodel.ForgetPasswordViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">

                <com.caressa.common.view.ArcImageView
                    android:id="@+id/img_forgot_password"
                    app:isTemplate="true"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/img_verification_code"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_forgot_password"
                    style="@style/CustomTextviewBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:text="@string/VERIFICATION_CODE"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/img_forgot_password"
                    app:layout_constraintStart_toStartOf="@+id/img_forgot_password"
                    app:layout_constraintTop_toBottomOf="@+id/img_forgot_password" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_forgot_password_desc"
                    style="@style/CustomTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OTP_SENT_DESC"
                    android:textColor="@color/vivant_track_param_textcolor"
                    android:textSize="@dimen/_14sdp"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_forgot_password"
                    app:layout_constraintEnd_toEndOf="@+id/lbl_forgot_password"
                    app:layout_constraintStart_toStartOf="@+id/lbl_forgot_password" />

                <com.caressa.security.view.PinView
                    android:id="@+id/layout_code_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:itemCount="6"
                    app:itemViewType="rectangle"
                    app:itemHeight="@dimen/_40sdp"
                    app:itemWidth="@dimen/_40sdp"
                    app:itemRadius="@dimen/_2sdp"
                    app:itemSpacing="@dimen/_6sdp"
                    app:lineWidth="1dp"
                    app:lineColor="@color/vivant_charcoal_grey"
                    android:inputType="number"
                    android:cursorVisible="true"
                    android:textColor="@color/vivant_charcoal_grey"
                    android:textSize="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_forgot_password_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                </com.caressa.security.view.PinView>
<!--                <com.chaos.view.PinView
                    android:id="@+id/layout_code_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:itemCount="6"
                    app:viewType="rectangle"
                    app:itemHeight="@dimen/_40sdp"
                    app:itemWidth="@dimen/_40sdp"
                    app:itemRadius="@dimen/_2sdp"
                    app:itemSpacing="@dimen/_6sdp"
                    app:lineWidth="0.8dp"
                    app:lineColor="@color/vivant_charcoal_grey"
                    android:inputType="number"
                    android:cursorVisible="true"
                    android:textColor="@color/vivant_charcoal_grey"
                    android:textSize="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_forgot_password_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                </com.chaos.view.PinView>-->

                <com.caressa.common.view.ArcTextView
                    android:id="@+id/txt_resend_code"
                    app:isTemplate="true"
                    app:isPrimary="true"
                    style="@style/CustomTextview"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/RESEND_CODE"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="@+id/layout_code_view"
                    app:layout_constraintStart_toStartOf="@+id/layout_code_view"
                    app:layout_constraintTop_toBottomOf="@+id/layout_code_view" />

                <com.caressa.common.view.ArcButton
                    android:id="@+id/btn_verify"
                    app:isTemplate="true"
                    style="@style/CustomButton"
                    android:text="@string/VERIFY"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="@+id/txt_resend_code"
                    app:layout_constraintStart_toStartOf="@+id/txt_resend_code"
                    app:layout_constraintTop_toBottomOf="@+id/txt_resend_code" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>